# django-tabbed-admin

./: .gitignore  AUTHORS.txt  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml
tests/: test_django_tabbed_admin2.py
