[tool.poetry]
name = "django-tabbed-admin2"
version = "0.1.1"
description = ""
authors = ["Guillaume Pousseo <guillaumepousseo@revsquare.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
